# Cartola

./: .env  .env.agent.example  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.streamlit  MIGRATION_GUIDE.md  Makefile  README.md  README_V2.md  agent.py  analise_com_confrontos.py  analise_confrontos_20260130_152848.txt  analise_rapida.py  app.py  cartola_escalacao_inteligente.py  cartola_optimization_engine.ipynb  cmd_output.txt  config.yaml  docker-compose.yml  error.txt  escalacao_otimizada_20260130_152259.txt  escalacao_otimizada_20260130_152634.txt  escalacao_otimizada_cartola.xlsx  escalacao_smart_v2.py  main.py  pyproject.toml  requirements.txt  sample_import_2014.txt  sample_import_2019.txt
.streamlit/: config.toml
docs/: ADVANCED_FEATURES_GUIDE.md  CHECKLIST_ESPECIALISTA.md  ESPECIALISTA_CARTOLA.md  GUIA_INTEGRACAO_PIPELINE.md  IMPROVEMENTS.md  METRICAS_IA_E_PADROES.md  RODADA_7_ANALISE_COMPLETA.md  TEMPLATE_ANALISE_RODADA.md  TESTING.md
examples/: optimize_lineup.py
output/: escalacao_rodada7_20260318_141841.xlsx  escalacao_rodada7_20260318_145751.xlsx  escalacao_rodada7_20260318_150646.xlsx  escalacao_rodada7_20260318_160433.xlsx  escalacao_rodada7_20260318_160800.xlsx  escalacao_rodada7_20260318_162533.xlsx  escalacao_rodada7_20260318_173545.xlsx  escalacao_rodada8_20260320_103826.xlsx  escalacao_smart_v2_r7_20260318_164905.xlsx  mega_escalacao_20260225_151203.xlsx  mega_escalacao_20260225_151418.xlsx  mega_escalacao_20260225_152706.xlsx  mega_escalacao_20260225_152850.xlsx  mega_escalacao_20260225_153041.xlsx  mega_escalacao_20260225_153447.xlsx  mega_escalacao_20260225_153640.xlsx
pages/: 01_taticas.py  02_backtesting.py  03_selecao_rodada.py  04_olheiro.py  05_parcial.py  06_ranking_ligas.py  backtesting.py  dashboard_team.py
scripts/: avaliar_escalacoes.py  backfill_historico.py  generate_test_lineup_v2.py  gerar_escalacao.py  import_cartola_history.py  test_import_2014.py  test_import_2019.py
src/: __init__.py  analise_especialista.py  backtesting.py  cartola_ai_analyzer.py  cartola_data_collector.py  cartola_local_optimizer.py  cartola_mega_optimizer.py  cartola_preprocessing.py  cartola_ultimate_optimizer.py  etl_cartola_master.py  news_agent.py  pipeline_escalacao.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cache.py  test_cartola_features.py  test_exceptions.py  test_genetic.py  test_optimizer.py  test_performance.py  test_schemas.py  (+2 more)
(+46 files in other folders)
